--- a/ReadWriteLockDemo.FileUtilities/ReadWriteLockDemo.FileUtilities.csproj
+++ b/ReadWriteLockDemo.FileUtilities/ReadWriteLockDemo.FileUtilities.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <LangVersion>9</LangVersion>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
 </Project>
